Fixed navbar issue while on mobile device

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,9 @@ nav a  {
 		padding: 4px;
 		display: flex;
 	}
+	nav .icon-bar:last-child{
+		padding-bottom: 0px;
+	}
 	nav ul {
 		display: none;
 	}
